# universal_notifier

./: .gitignore  CHANGELOG.md  OLD_README.md  README.md  README_IT.md  TESTS.md  USER_GUIDE.md  USER_GUIDE_IT.md  __init__.py  binary_sensor.py  const.py  manifest.json  pyproject.toml  select.py  sensor.py  utils.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: auto-release.yml  release.yml  test.yml
custom_components/universal_notifier/: __init__.py  binary_sensor.py  config_flow.py  const.py  manifest.json  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py  text.py  utils.py
custom_components/universal_notifier/translations/: en.json  it.json
tests/: Dockerfile.test  conftest.py  test_binary_sensor.py  test_config_flow.py  test_init.py  test_number.py  test_select.py  test_sensor.py  test_switch.py  test_text.py  test_utils.py
