[project]
name = "universal-notifier"
version = "0.8.2"
requires-python = ">=3.13"
description = "Universal Notifier — Home Assistant Custom Component"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "freezegun>=1.3",
    "homeassistant>=2025.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.coverage.run]
source = ["custom_components"]

[tool.coverage.report]
show_missing = true
